--- a/style.css
+++ b/style.css
@@ -428,7 +428,7 @@ line-height: 5px;
 }
 
 
-@media only screen and (min-width:640px) and (max-width:1475px) {
+@media only screen and (max-width:1475px) {
   header {
     width: 1100px;
     margin:0 auto;
@@ -450,7 +450,7 @@ line-height: 5px;
   }
 }
 
-@media only screen and (min-width:725px) and (max-width:1100px) {
+@media only screen and (max-width:1100px) {
   header {
     width: 725px;
     margin:0 auto;
@@ -472,7 +472,7 @@ line-height: 5px;
   }
 }
 
-@media only screen and (min-width:440px) and (max-width:725px) {
+@media screen and (max-width: 725px){
   header {
     width: 400px;
     margin:0 auto;
@@ -532,7 +532,81 @@ transition: 0.5s ;
   margin-left: auto;
   margin-right: auto;
   }
+}
+
+
+@media screen and (max-width: 400px){
+  header {
+    width: 320px;
+    margin:0 auto;
+    height: 180px;
+    background: white;
+    padding: 0px 0px;
+    box-sizing: border-box;
+    }
+
+    .header-logo p {
+      padding-top: 60px;
+      line-height: 0px;
+      font-size: 21px;
+      letter-spacing: 0.25px;
+      font-weight: 500;
+      float:none;
+    }
+
+.ul {
+  text-align: center;
+}
+
+    .header-list {
+      padding-top:18px;
+      padding-bottom:50px;
+      margin-left: auto;
+      margin-right: auto;
+      margin-left: auto;
+      margin-right: auto;
+      padding-left: 18px;
 
 
 
+    }
 
+    .contact, .biography, .work {
+        padding-top: 3px;
+        font-size: 14px;
+        color: #a9a9a9;
+        font-weight: 400;
+        color: :#C0C0C0;
+        line-height: :0px;
+    }
+    .slash1, .slash2 {
+      font-size: 18px;
+      padding-right:10px;
+      font-weight: 300;
+    line-height: :0px;
+
+    }
+
+.item img {
+width:320px;
+transition: 0.5s ;
+}
+
+.grid {
+  display: grid;
+  width:320px;
+  grid-template-columns: repeat(auto-fit,1fr);
+  row-gap:23px;
+
+  }
+
+  .copyright {
+    padding-top:80px;
+    text-align: center;
+    font-size:11px;
+    color: #696969;
+    padding-bottom:15px;
+  }
+
+
+}
