--- a/style.css
+++ b/style.css
@@ -539,19 +539,23 @@ transition: 0.5s ;
   header {
     width: 320px;
     margin:0 auto;
-    height: 180px;
+    height: 130px;
     background: white;
     padding: 0px 0px;
     box-sizing: border-box;
     }
 
+.span {
+  line-height: 0px;
+}
     .header-logo p {
-      padding-top: 60px;
+      padding-top: 45px;
       line-height: 0px;
       font-size: 21px;
       letter-spacing: 0.25px;
       font-weight: 500;
       float:none;
+      padding-bottom: 0px;
     }
 
 .ul {
@@ -559,10 +563,8 @@ transition: 0.5s ;
 }
 
     .header-list {
-      padding-top:18px;
+      padding-top:5px;
       padding-bottom:50px;
-      margin-left: auto;
-      margin-right: auto;
       margin-left: auto;
       margin-right: auto;
       padding-left: 18px;
