--- a/style.css
+++ b/style.css
@@ -102,6 +102,14 @@ body {
   line-height: 43px;
 }
 
+.item-title4 {
+  font-size: 18px;
+  letter-spacing: 1px;
+}
+.item-title4:first-line {
+  line-height: 43px;
+}
+
 .item-title13 {
   font-size: 18px;
   letter-spacing: 1px;
