--- a/style.css
+++ b/style.css
@@ -72,7 +72,9 @@ body {
 .work:hover {
   opacity: 0.35;
 }
-
+.drawer {
+  display: none;
+}
 
 .grid {
   padding-top:20px;
@@ -583,25 +585,31 @@ transition: 0.5s ;
   header {
     width: 320px;
     margin:0 auto;
-    height: 110px;
-    background: white;
+    height: 68px;
     padding: 0px 0px;
+    padding-bottoms:0;
+    margin-bottoms:0;
     }
 
-  .span {
-  line-height: 0px;
-  }
+.header-logo {
+  padding-top: 0;
+}
+
     .header-logo p {
-      padding-top: 35px;
+      padding-top: 13.5px;
       line-height: 0px;
-      font-size: 21px;
-      letter-spacing: 0.25px;
-      font-weight: 500;
-      float:none;
+      font-size: 20px;
+      letter-spacing: 1px;
+      font-weight: 700;
+      float:left;
       padding-bottom: 0px;
-      margin-bottom: 0px;
-
+      margin: 0px;
     }
+
+.header-logo p::first-line {
+  line-height: 42px;
+}
+
       .header-logo span {
         line-height: 0px;
         float:none;
@@ -609,28 +617,103 @@ transition: 0.5s ;
         margin-bottom: 0px;
       }
 
-    .header-list {
-      padding-top:21px;
-      padding-bottom:50px;
-      margin-left: auto;
-      margin-right: auto;
-      padding-left: 14.5px;
-    }
+      .br-sp {
+        display:block;
+      }
 
-    .contact, .biography, .work {
-        padding-top: 3px;
-        font-size: 14px;
-        color: #a9a9a9;
-        font-weight: 500;
-        color: :#C0C0C0;
-        line-height: :0px;
-    }
-    .slash1, .slash2 {
-      font-size: 18px;
-      padding-right:10px;
-      font-weight: 300;
-    line-height: :0px;
-    }
+      .header-list {
+        display: none;
+      }
+
+.drawer{
+  display: block;
+  margin: 0;
+}
+
+   .drawer-hidden {
+     display: none;
+   }
+
+   .drawer-open {
+     display: flex;
+     float:right;
+     padding-top: 43px;
+     height: 30px;
+     width: 26px;
+     justify-content: center;
+     position: relative;
+     z-index: 98;
+     cursor: pointer;
+     padding-bottom:0;
+     margin:0;
+   }
+
+   .drawer-open span,
+   .drawer-open span:before,
+   .drawer-open span:after {
+     content: '';
+     display: block;
+     height: 4px;
+     width: 25px;
+     border-radius: 3px;
+     background: #808080;
+     transition: 0.5s;
+     position: absolute;
+   }
+
+   .drawer-open span:before {
+     bottom: 10px;
+   }
+
+   .drawer-open span:after {
+     top: 10px;
+   }
+
+   #drawer-check:checked ~ .drawer-open span {
+     background: rgba(255, 255, 255, 0);
+   }
+
+   #drawer-check:checked ~ .drawer-open span::before {
+     bottom: 0;
+     transform: rotate(45deg);
+   }#drawer-check:checked ~ .drawer-open span::after {
+  top: 0;
+  transform: rotate(-45deg);
+}
+
+   .drawer-content {
+     width: 100%;
+     height: 100%;
+     position: fixed;
+     top: 0;
+     left: 100%;
+     background: #fff;
+     transition: .5s;
+     margin:0;
+     padding:0;
+   }
+
+   #drawer-check:checked ~ .drawer-content {
+     left: 0;
+   }
+
+
+
+
+.drawer-list {
+  position: absolute;
+  margin: 0;
+  padding-left: 35px;
+  padding-top:35px;
+  list-style: none;
+  font-family: "Roboto";
+  font-weight: 700;
+  line-height: 55px;
+  font-size:30px;
+  letter-spacing: 1px;
+  bottom: 0;
+  padding-bottom: 40px;
+}
 
 .item img {
 width:320px;
