--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@ header {
   height: 110px;
   background: white;
   padding: 0px 0px;
-  font-family:"Roboto"
+  font-family:"Roboto";
+  position:  relative; 
+  z-index: 10;
 }
 
 a {
@@ -32,6 +34,8 @@ span {
 
 body {
   font-family: 'Roboto', "YuGothic-bolder";
+    position:  relative; 
+    z-index: 0;
 }
 
 
