--- a/style.css
+++ b/style.css
@@ -4,9 +4,7 @@ header {
   height: 110px;
   background: white;
   padding: 0px 0px;
-  font-family:"Roboto";
-  position:  relative; 
-  z-index: 10;
+  font-family:"Roboto"
 }
 
 a {
@@ -21,7 +19,7 @@ a {
   padding-left: 0px;
   font-size: 21px;
   letter-spacing: 2px;
-  font-weight: 500;
+  font-weight: 700;
 }
 
 .br-sp {
@@ -33,11 +31,8 @@ span {
 }
 
 body {
-  font-family: 'Roboto', "YuGothic-bolder";
-    position:  relative; 
-    z-index: 0;
+  font-family: "helvetica", "YuGothic";
 }
-
 
 .header-list {
   padding-top:39px;
@@ -49,7 +44,7 @@ body {
     color: #a9a9a9;
     list-style: none;
     float: right;
-    font-weight: 500;
+    font-weight: 700;
     letter-spacing: 0.5px;
     color: :#C0C0C0;
 }
@@ -80,9 +75,11 @@ body {
 .work:hover {
   opacity: 0.35;
 }
+
 .drawer {
   display: none;
 }
+
 
 .grid {
   padding-top:20px;
@@ -100,37 +97,48 @@ body {
   transition: 0.5s ;
 }
 .item-title {
+  font-weight: bolder;
   font-size: 18px;
-  letter-spacing: 1px;
+  letter-spacing: 0.5px;
 }
 
 .item-title2 {
+  font-weight: bolder;
   font-size: 18px;
-  letter-spacing: 1px;
+  letter-spacing: 0.5px;
 }
 .item-title2:first-line {
   line-height: 43px;
 }
 
 .item-title5 {
+  font-weight: bolder;
   font-size: 18px;
-  letter-spacing: 1px;
+  letter-spacing: 0.5px;
 }
 .item-title5:first-line {
   line-height: 43px;
 }
 
 .item-title7 {
+  font-weight: bolder;
   font-size: 18px;
-  letter-spacing: 1px;
+  letter-spacing: 0.5px;
 }
 .item-title7:first-line {
   line-height: 43px;
 }
 
+.item-title8 {
+  font-weight: bolder;
+  font-size: 20px;
+  letter-spacing: 0.5px;
+}
+
 .item-title11 {
+  font-weight: bolder;
   font-size: 18px;
-  letter-spacing: 1px;
+  letter-spacing: 0.5px;
 }
 .item-title11:first-line {
   line-height: 43px;
@@ -520,68 +528,6 @@ line-height: 5px;
   width:725px;
   gap:25px;
   grid-template-columns: repeat(2, 1fr);
-  row-gap:23px;
-  margin-left: auto;
-  margin-right: auto;
-  }
-}
-
-@media screen and (max-width: 725px){
-  header {
-    width: 400px;
-    margin:0 auto;
-    height: 155px;
-    background: white;
-    padding: 0px 0px;
-    box-sizing: border-box;
-    }
-
-    .header-logo p {
-      padding-top: 40px;
-      line-height: 0px;
-      font-size: 23.5px;
-      letter-spacing: 2px;
-      font-weight: 500;
-      float:none;
-    }
-
-.ul {
-  text-align: center;
-}
-
-    .header-list {
-      padding-top:15px;
-      padding-left:40px;
-      display: inline-block;
-      padding-bottom:50px;
-
-    }
-
-    .contact, .biography, .work {
-        padding-top: 3px;
-        font-size: 17px;
-        color: #a9a9a9;
-        font-weight: 500;
-        color: :#C0C0C0;
-        line-height: :0px;
-    }
-    .slash1, .slash2 {
-      font-size: 22px;
-      padding-right:10px;
-      font-weight: 300;
-    line-height: :0px;
-    }
-
-.item img {
-width:400px;
-transition: 0.5s ;
-}
-
-.grid {
-  padding-top:20px;
-  display: grid;
-  width:400px;
-  grid-template-columns: 1fr;
   row-gap:23px;
   margin-left: auto;
   margin-right: auto;
