--- a/style.css
+++ b/style.css
@@ -4,51 +4,47 @@ header {
   height: 110px;
   background: white;
   padding: 0px 0px;
-  font-family:"Roboto"
+  font-family:"Roboto";
+  position:  relative; 
+  z-index: 10;
 }
-
 a {
   text-decoration: none;
   border: none;
   color: black;
 }
-
 .header-logo p {
   padding-top: 32px;
   float:left;
   padding-left: 0px;
   font-size: 21px;
   letter-spacing: 2px;
-  font-weight: 700;
+  font-weight: 500;
 }
-
 .br-sp {
   display:none;
 }
-
 span {
   color: #a9a9a9;
 }
-
 body {
-  font-family: "helvetica", "YuGothic";
+  font-family: 'Roboto', "YuGothic-bolder";
+    position:  relative; 
+    z-index: 0;
 }
-
 .header-list {
   padding-top:39px;
 }
-
 .contact, .biography, .work {
     padding-top: 3.5px;
     font-size: 15px;
     color: #a9a9a9;
     list-style: none;
     float: right;
-    font-weight: 700;
+    font-weight: 500;
     letter-spacing: 0.5px;
     color: :#C0C0C0;
 }
-
 .slash1, .slash2 {
   font-size: 20px;
   list-style: none;
@@ -57,30 +53,21 @@ body {
   padding-left:10px;
   font-weight: 300;
 }
-
-
 .contact:hover {
   opacity: 0.35;
 }
-
-
 .biography:hover {
   opacity: 0.35;
 }
-
 .work {
   float:right;
 }
-
 .work:hover {
   opacity: 0.35;
 }
-
 .drawer {
   display: none;
 }
-
-
 .grid {
   padding-top:20px;
   display: grid;
@@ -91,73 +78,48 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
-
 .item img {
   width:350px;
   transition: 0.5s ;
 }
 .item-title {
-  font-weight: bolder;
   font-size: 18px;
-  letter-spacing: 0.5px;
+  letter-spacing: 1px;
 }
-
 .item-title2 {
-  font-weight: bolder;
   font-size: 18px;
-  letter-spacing: 0.5px;
+  letter-spacing: 1px;
 }
 .item-title2:first-line {
   line-height: 43px;
 }
-
 .item-title5 {
-  font-weight: bolder;
   font-size: 18px;
-  letter-spacing: 0.5px;
+  letter-spacing: 1px;
 }
 .item-title5:first-line {
   line-height: 43px;
 }
-
 .item-title7 {
-  font-weight: bolder;
   font-size: 18px;
-  letter-spacing: 0.5px;
+  letter-spacing: 1px;
 }
 .item-title7:first-line {
   line-height: 43px;
 }
-
-.item-title8 {
-  font-weight: bolder;
-  font-size: 20px;
-  letter-spacing: 0.5px;
-}
-
 .item-title11 {
-  font-weight: bolder;
   font-size: 18px;
-  letter-spacing: 0.5px;
+  letter-spacing: 1px;
 }
 .item-title11:first-line {
   line-height: 43px;
 }
-
-
-
-
-
 .item-info {
   padding-top: 4px;
   font-size: 14px;
   letter-spacing: 1px;
   color: #808080;
 }
-
-
-
-
 .item1 {
   position: relative;
 }
@@ -177,7 +139,6 @@ line-height: 6px;
 .item1:hover .item1-text {
   opacity:1;
 }
-
 .item2 {
   position: relative;
 }
@@ -197,7 +158,6 @@ line-height: 6px;
 .item2:hover .item2-text {
   opacity:1;
 }
-
 .item3 {
 position: relative;
 }
@@ -217,7 +177,6 @@ line-height: 6px;
 .item3:hover .item3-text {
   opacity:1;
 }
-
 .item4 {
   position: relative;
 }
@@ -237,7 +196,6 @@ line-height: 5px;
 .item4:hover .item4-text {
   opacity:1;
 }
-
 .item5 {
   position: relative;
 }
@@ -257,7 +215,6 @@ line-height: 6px;
 .item5:hover .item5-text {
   opacity:1;
 }
-
 .item6 {
   position: relative;
 }
@@ -277,9 +234,6 @@ line-height: 6px;
 .item6:hover .item6-text {
   opacity:1;
 }
-
-
-
 .item7 {
   position: relative;
 }
@@ -299,7 +253,6 @@ line-height: 6px;
 .item7:hover .item7-text {
   opacity:1;
 }
-
 .item8 {
   position: relative;
 }
@@ -319,7 +272,6 @@ line-height: 6px;
 .item8:hover .item8-text {
   opacity:1;
 }
-
 .item9 {
   position: relative;
 }
@@ -339,7 +291,6 @@ line-height: 5px;
 .item9:hover .item9-text {
   opacity:1;
 }
-
 .item10 {
   position: relative;
 }
@@ -359,7 +310,6 @@ line-height: 6px;
 .item10:hover .item10-text {
   opacity:1;
 }
-
 .item11 {
   position: relative;
 }
@@ -373,14 +323,12 @@ text-align: center;
 opacity:0;
 line-height: 6px;
 }
-
 .item:hover .item11 img {
   opacity:0.1;
 }
 .item11:hover .item11-text {
   opacity:1;
 }
-
 .item12 {
   position: relative;
 }
@@ -400,7 +348,6 @@ line-height: 6px;
 .item12:hover .item12-text {
   opacity:1;
 }
-
 .item13 {
   position: relative;
 }
@@ -420,7 +367,6 @@ line-height: 6px;
 .item13:hover .item13-text {
   opacity:1;
 }
-
 .item14 {
   position: relative;
 }
@@ -440,7 +386,6 @@ line-height: 6px;
 .item14:hover .item14-text {
   opacity:1;
 }
-
 .item15 {
   position: relative;
 }
@@ -460,7 +405,6 @@ line-height: 5px;
 .item15:hover .item15-text {
   opacity:1;
 }
-
 .item16 {
   position: relative;
 }
@@ -480,7 +424,6 @@ line-height: 5px;
 .item16:hover .item16-text {
   opacity:1;
 }
-
 .copyright {
   padding-top:80px;
   text-align: center;
@@ -488,8 +431,6 @@ line-height: 5px;
   color: #696969;
   padding-bottom:50px;
 }
-
-
 @media only screen and (max-width:1475px) {
   header {
     width: 1100px;
@@ -499,7 +440,6 @@ line-height: 5px;
     padding: 0px 0px;
     box-sizing: border-box;
     }
-
 .grid {
   padding-top:20px;
   display: grid;
@@ -511,7 +451,6 @@ line-height: 5px;
   margin-right: auto;
   }
 }
-
 @media only screen and (max-width:1100px) {
   header {
     width: 725px;
@@ -521,7 +460,6 @@ line-height: 5px;
     padding: 0px 0px;
     box-sizing: border-box;
     }
-
 .grid {
   padding-top:20px;
   display: grid;
@@ -533,22 +471,73 @@ line-height: 5px;
   margin-right: auto;
   }
 }
-
-
+@media screen and (max-width: 725px){
+  header {
+    width: 400px;
+    margin:0 auto;
+    height: 155px;
+    background: white;
+    padding: 0px 0px;
+    box-sizing: border-box;
+    }
+    .header-logo p {
+      padding-top: 40px;
+      line-height: 0px;
+      font-size: 23.5px;
+      letter-spacing: 2px;
+      font-weight: 500;
+      float:none;
+    }
+.ul {
+  text-align: center;
+}
+    .header-list {
+      padding-top:15px;
+      padding-left:40px;
+      display: inline-block;
+      padding-bottom:50px;
+    }
+    .contact, .biography, .work {
+        padding-top: 3px;
+        font-size: 17px;
+        color: #a9a9a9;
+        font-weight: 500;
+        color: :#C0C0C0;
+        line-height: :0px;
+    }
+    .slash1, .slash2 {
+      font-size: 22px;
+      padding-right:10px;
+      font-weight: 300;
+    line-height: :0px;
+    }
+.item img {
+width:400px;
+transition: 0.5s ;
+}
+.grid {
+  padding-top:20px;
+  display: grid;
+  width:400px;
+  grid-template-columns: 1fr;
+  row-gap:23px;
+  margin-left: auto;
+  margin-right: auto;
+  }
+}
 @media screen and (max-width: 400px){
   header {
     width: 320px;
     margin:0 auto;
+    height: 85px;
     height: 87px;
     padding: 0px 0px;
     padding-bottoms:0;
     margin-bottoms:0;
     }
-
 .header-logo {
   padding-top: 0;
 }
-
     .header-logo p {
       padding-top: 13.5px;
       line-height: 0px;
@@ -559,35 +548,28 @@ line-height: 5px;
       padding-bottom: 0px;
       margin: 0px;
     }
-
 .header-logo p::first-line {
   line-height: 42px;
 }
-
       .header-logo span {
         line-height: 0px;
         float:none;
         padding-bottom: 0px;
         margin-bottom: 0px;
       }
-
       .br-sp {
         display:block;
       }
-
       .header-list {
         display: none;
       }
-
 .drawer{
   display: block;
   margin: 0;
 }
-
    .drawer-hidden {
      display: none;
    }
-
    .drawer-open {
      display: flex;
      float:right;
@@ -601,7 +583,6 @@ line-height: 5px;
      padding-bottom:0;
      margin:0;
    }
-
    .drawer-open span,
    .drawer-open span:before,
    .drawer-open span:after {
@@ -614,19 +595,15 @@ line-height: 5px;
      transition: 0.5s;
      position: absolute;
    }
-
    .drawer-open span:before {
      bottom: 10px;
    }
-
    .drawer-open span:after {
      top: 10px;
    }
-
    #drawer-check:checked ~ .drawer-open span {
      background: rgba(255, 255, 255, 0);
    }
-
    #drawer-check:checked ~ .drawer-open span::before {
      bottom: 0;
      transform: rotate(45deg);
@@ -634,7 +611,6 @@ line-height: 5px;
   top: 0;
   transform: rotate(-45deg);
 }
-
    .drawer-content {
      width: 100%;
      height: 100%;
@@ -646,14 +622,9 @@ line-height: 5px;
      margin:0;
      padding:0;
    }
-
    #drawer-check:checked ~ .drawer-content {
      left: 0;
    }
-
-
-
-
 .drawer-list {
   position: absolute;
   margin: 0;
@@ -668,12 +639,10 @@ line-height: 5px;
   bottom: 0;
   padding-bottom: 40px;
 }
-
 .item img {
 width:320px;
 transition: 0.5s ;
 }
-
 .grid {
   padding-top:0;
   display: grid;
@@ -682,9 +651,7 @@ transition: 0.5s ;
   row-gap:23px;
   text-align: center;
   margin:0;
-
   }
-
   .copyright {
     padding-top:50px;
     text-align: center;
@@ -692,6 +659,4 @@ transition: 0.5s ;
     color: #696969;
     padding-bottom:60px;
   }
-
-
 }
