--- a/style.css
+++ b/style.css
@@ -4,47 +4,51 @@ header {
   height: 110px;
   background: white;
   padding: 0px 0px;
-  font-family:"Roboto";
-  position:  relative; 
-  z-index: 10;
+  font-family:"Roboto"
 }
+
 a {
   text-decoration: none;
   border: none;
   color: black;
 }
+
 .header-logo p {
   padding-top: 32px;
   float:left;
   padding-left: 0px;
   font-size: 21px;
   letter-spacing: 2px;
-  font-weight: 500;
+  font-weight: 700;
 }
+
 .br-sp {
   display:none;
 }
+
 span {
   color: #a9a9a9;
 }
+
 body {
-  font-family: 'Roboto', "YuGothic-bolder";
-    position:  relative; 
-    z-index: 0;
+  font-family: "helvetica", "YuGothic";
 }
+
 .header-list {
   padding-top:39px;
 }
+
 .contact, .biography, .work {
     padding-top: 3.5px;
     font-size: 15px;
     color: #a9a9a9;
     list-style: none;
     float: right;
-    font-weight: 500;
+    font-weight: 700;
     letter-spacing: 0.5px;
     color: :#C0C0C0;
 }
+
 .slash1, .slash2 {
   font-size: 20px;
   list-style: none;
@@ -53,15 +57,21 @@ body {
   padding-left:10px;
   font-weight: 300;
 }
+
+
 .contact:hover {
   opacity: 0.35;
 }
+
+
 .biography:hover {
   opacity: 0.35;
 }
+
 .work {
   float:right;
 }
+
 .work:hover {
   opacity: 0.35;
 }
@@ -83,17 +93,20 @@ body {
   transition: 0.5s ;
 }
 .item-title {
+  font-weight: bolder;
   font-size: 18px;
   letter-spacing: 1px;
 }
 .item-title2 {
+  font-weight: bolder;
   font-size: 18px;
-  letter-spacing: 1px;
+  letter-spacing: 0px;
 }
 .item-title2:first-line {
   line-height: 43px;
 }
 .item-title5 {
+  font-weight: bolder;
   font-size: 18px;
   letter-spacing: 1px;
 }
@@ -101,19 +114,33 @@ body {
   line-height: 43px;
 }
 .item-title7 {
+  font-weight: bolder;
   font-size: 18px;
+  letter-spacing: 1px;
+}
+.item-title8 {
+  font-weight: bolder;
+  font-size: 21px;
   letter-spacing: 1px;
 }
 .item-title7:first-line {
   line-height: 43px;
 }
 .item-title11 {
+  font-weight: bolder;
   font-size: 18px;
   letter-spacing: 1px;
 }
 .item-title11:first-line {
   line-height: 43px;
 }
+.item-title15 {
+  font-weight: bolder;
+  font-size: 18px;
+  letter-spacing: 0.5px;
+}
+
+
 .item-info {
   padding-top: 4px;
   font-size: 14px;
@@ -475,48 +502,122 @@ line-height: 5px;
   header {
     width: 400px;
     margin:0 auto;
-    height: 155px;
-    background: white;
+    height: 85px;
+    height: 87px;
     padding: 0px 0px;
-    box-sizing: border-box;
+    padding-bottoms:0;
+    margin-bottoms:0;
     }
-    .header-logo p {
-      padding-top: 40px;
-      line-height: 0px;
-      font-size: 23.5px;
-      letter-spacing: 2px;
-      font-weight: 500;
-      float:none;
-    }
-.ul {
-  text-align: center;
+.header-logo {
+  padding-top: 0;
 }
-    .header-list {
-      padding-top:15px;
-      padding-left:40px;
-      display: inline-block;
-      padding-bottom:50px;
+    .header-logo p {
+      padding-top: 13.5px;
+      line-height: 0px;
+      font-size: 20px;
+      letter-spacing: 1px;
+      font-weight: 700;
+      float:left;
+      padding-bottom: 0px;
+      margin: 0px;
     }
-    .contact, .biography, .work {
-        padding-top: 3px;
-        font-size: 17px;
-        color: #a9a9a9;
-        font-weight: 500;
-        color: :#C0C0C0;
-        line-height: :0px;
-    }
-    .slash1, .slash2 {
-      font-size: 22px;
-      padding-right:10px;
-      font-weight: 300;
-    line-height: :0px;
-    }
+.header-logo p::first-line {
+  line-height: 42px;
+}
+      .header-logo span {
+        line-height: 0px;
+        float:none;
+        padding-bottom: 0px;
+        margin-bottom: 0px;
+      }
+      .br-sp {
+        display:block;
+      }
+      .header-list {
+        display: none;
+      }
+.drawer{
+  display: block;
+  margin: 0;
+}
+   .drawer-hidden {
+     display: none;
+   }
+   .drawer-open {
+     display: flex;
+     float:right;
+     padding-top: 43px;
+     height: 30px;
+     width: 26px;
+     justify-content: center;
+     position: relative;
+     z-index: 98;
+     cursor: pointer;
+     padding-bottom:0;
+     margin:0;
+   }
+   .drawer-open span,
+   .drawer-open span:before,
+   .drawer-open span:after {
+     content: '';
+     display: block;
+     height: 4px;
+     width: 25px;
+     border-radius: 3px;
+     background: #808080;
+     transition: 0.5s;
+     position: absolute;
+   }
+   .drawer-open span:before {
+     bottom: 10px;
+   }
+   .drawer-open span:after {
+     top: 10px;
+   }
+   #drawer-check:checked ~ .drawer-open span {
+     background: rgba(255, 255, 255, 0);
+   }
+   #drawer-check:checked ~ .drawer-open span::before {
+     bottom: 0;
+     transform: rotate(45deg);
+   }#drawer-check:checked ~ .drawer-open span::after {
+  top: 0;
+  transform: rotate(-45deg);
+}
+   .drawer-content {
+     width: 100%;
+     height: 100%;
+     position: fixed;
+     top: 0;
+     left: 100%;
+     background: #fff;
+     transition: .5s;
+     margin:0;
+     padding:0;
+   }
+   #drawer-check:checked ~ .drawer-content {
+     left: 0;
+   }
+.drawer-list {
+  position: absolute;
+  margin: 0;
+  padding-left: 35px;
+  padding-top:35px;
+  list-style: none;
+  font-family: "Roboto";
+  font-weight: 700;
+  line-height: 55px;
+  font-size:30px;
+  letter-spacing: 1px;
+  bottom: 0;
+  padding-bottom: 40px;
+}
 .item img {
 width:400px;
 transition: 0.5s ;
 }
 .grid {
-  padding-top:20px;
+  padding-top:0px;
   display: grid;
   width:400px;
   grid-template-columns: 1fr;
