--- a/style.css
+++ b/style.css
@@ -737,4 +737,22 @@ transition: 0.5s ;
     color: #696969;
     padding-bottom:60px;
   }
+
+@media (orientation: landscape) and (max-width: 767px){
+  header {
+    width: 650px;
+    }
+    .item img {
+    width:315px;
+    }
+    .grid {
+      padding-top:20px;
+      display: grid;
+      width:650px;
+      gap:25px;
+      grid-template-columns: repeat(2, 1fr);
+      row-gap:23px;
+      margin-left: auto;
+      margin-right: auto;
+      }
 }
